# TemplateFastAPIProject

./: .env.example  README.md  pyproject.toml
src/: factory.py  settings.py
src/health/: router.py  schema.py
